Added images to folder

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -1,13 +1,18 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap demo</title>
-    <link href="styles/styles.css" rel="stylesheet">
-  </head>
-  <body>
-    <h1>Hello, world!</h1>
-    <script src="scripts/scripts.js"></script>
-  </body>
+
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Raising The Bar</title>
+  <link href="styles/styles.css" rel="stylesheet">
+</head>
+
+<body>
+  <div>
+    <img src="src/images/rtb-logo-white.jpg" alt="Raising The Bar Logo">
+  </div>
+  <script src="scripts/scripts.js"></script>
+</body>
+
 </html>
