--- a/landing-page.html
+++ b/landing-page.html
@@ -5,34 +5,33 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Raising The Bar</title>
-  <link href="styles/styles.css" rel="stylesheet">
+  <link href="styles/landing-page.css" rel="stylesheet">
 </head>
 
 <body>
   <div class="header">
     <div class="logo">
-      <img id= logo src="src/images/rtb-logo-white.png" alt="Raising The Bar Logo">
+      <img id= logo class="fade-in" src="src/images/rtb-logo-white.png" alt="Raising The Bar Logo">
     </div>
     <div class="dark-mode-button">
-      <img id="darkModeToggle" src="src/images/dark-mode-off-button.png" alt="Dark Mode Button" height="30px">
+      <img id="darkModeToggle" class="fade-in" src="src/images/dark-mode-off-button.png" alt="Dark Mode Button" height="30px">
     </div>
   </div>
   <div class="container flex-container">
     <div class="dark-theme">
-      <div class="box-programmes">
+      <div class="box-programmes fade-in button-like" id="box-programmes">
         <h2>Custom Programs</h2>
-        <p>Get started by completing a simple questionnaire, and let our cutting-edge algorithm design a workout plan
-          built just for you.</p>
+        <p>Get started by completing a simple questionnaire, and let our cutting-edge algorithm design a workout plan built just for you.</p>
       </div>
     </div>
-    <div class="dark-theme">
-      <div class="box-coaching" style="cursor: pointer;">
+    <div class="dark-theme" >
+      <div class="box-coaching fade-in button-like" box-coaching="box-coaching">
         <h2>1-on-1 Coaching</h2>
-        <p>Let’s make your dream body a reality. Click here to learn how our expert team can help.</p>
+        <p>Let’s make your dream body a reality with personalized support and expert guidance. Click here to learn how our team can help.</p>
       </div>
     </div>
   </div>
-  <footer class="footer">
+  <footer class="footer fade-in" id="footer">
     <div class="footer-content">
       <p>&copy; 2024 Raising The Bar. All rights reserved.</p>
       <div class="footer-links">
@@ -55,7 +54,7 @@
       </div>
     </div>
   </footer>
-  <script src="scripts/scripts.js"></script>
+  <script src="scripts/landing-page.js"></script>
 </body>
 
 </html>
