Fix internal page links to point to /pages/

--- a/client/index.html
+++ b/client/index.html
@@ -16,25 +16,26 @@
 <body>
   <h1>Dev Navigation</h1>
   <ul>
-    <li><a href="accessibility-statement.html">Accessibility Statement</a></li>
-    <li><a href="contact-us.html">Contact Us</a></li>
-    <li><a href="cookie-policy.html">Cookie Policy</a></li>
-    <li><a href="copyright-notice.html">Copyright Notice</a></li>
-    <li><a href="dashboard.html">Dashboard</a></li>
-    <li><a href="disclaimer.html">Disclaimer</a></li>
-    <li><a href="dmca-policy.html">DMCA Policy</a></li>
-    <li><a href="eula.html">EULA</a></li>
-    <li><a href="forms.html">Forms</a></li>
-    <li><a href="landing-page.html">Landing Page</a></li>
-    <li><a href="legal-overview.html">Legal Overview</a></li>
-    <li><a href="log-in.html">Log In</a></li>
-    <li><a href="nutrition-tracker.html">Nutrition Tracker</a></li>
-    <li><a href="offer.html">Offer</a></li>
-    <li><a href="privacy-policy.html">Privacy Policy</a></li>
-    <li><a href="refund-policy.html">Refund Policy</a></li>
-    <li><a href="sign-up.html">Sign Up</a></li>
-    <li><a href="tos.html">Terms of Service</a></li>
-    <li><a href="workout-tracker.html">Workout Tracker</a></li>
+    <li><a href="pages/accessibility-statement.html">Accessibility Statement</a></li>
+    <li><a href="pages/contact-us.html">Contact Us</a></li>
+    <li><a href="pages/cookie-policy.html">Cookie Policy</a></li>
+    <li><a href="pages/copyright-notice.html">Copyright Notice</a></li>
+    <li><a href="pages/dashboard.html">Dashboard</a></li>
+    <li><a href="pages/disclaimer.html">Disclaimer</a></li>
+    <li><a href="pages/dmca-policy.html">DMCA Policy</a></li>
+    <li><a href="pages/eula.html">EULA</a></li>
+    <li><a href="pages/forms.html">Forms</a></li>
+    <li><a href="pages/landing-page.html">Landing Page</a></li>
+    <li><a href="pages/legal-overview.html">Legal Overview</a></li>
+    <li><a href="pages/log-in.html">Log In</a></li>
+    <li><a href="pages/nutrition-tracker.html">Nutrition Tracker</a></li>
+    <li><a href="pages/offer.html">Offer</a></li>
+    <li><a href="pages/privacy-policy.html">Privacy Policy</a></li>
+    <li><a href="pages/refund-policy.html">Refund Policy</a></li>
+    <li><a href="pages/sign-up.html">Sign Up</a></li>
+    <li><a href="pages/tos.html">Terms of Service</a></li>
+    <li><a href="pages/workout-tracker.html">Workout Tracker</a></li>
   </ul>
+  
 </body>
 </html>
