Fix internal page links for GitHub Pages

--- a/client/index.html
+++ b/client/index.html
@@ -16,26 +16,25 @@
 <body>
   <h1>Dev Navigation</h1>
   <ul>
-    <li><a href="pages/accessibility-statement.html">Accessibility Statement</a></li>
-    <li><a href="pages/contact-us.html">Contact Us</a></li>
-    <li><a href="pages/cookie-policy.html">Cookie Policy</a></li>
-    <li><a href="pages/copyright-notice.html">Copyright Notice</a></li>
-    <li><a href="pages/dashboard.html">Dashboard</a></li>
-    <li><a href="pages/disclaimer.html">Disclaimer</a></li>
-    <li><a href="pages/dmca-policy.html">DMCA Policy</a></li>
-    <li><a href="pages/eula.html">EULA</a></li>
-    <li><a href="pages/forms.html">Forms</a></li>
-    <li><a href="pages/landing-page.html">Landing Page</a></li>
-    <li><a href="pages/legal-overview.html">Legal Overview</a></li>
-    <li><a href="pages/log-in.html">Log In</a></li>
-    <li><a href="pages/nutrition-tracker.html">Nutrition Tracker</a></li>
-    <li><a href="pages/offer.html">Offer</a></li>
-    <li><a href="pages/privacy-policy.html">Privacy Policy</a></li>
-    <li><a href="pages/refund-policy.html">Refund Policy</a></li>
-    <li><a href="pages/sign-up.html">Sign Up</a></li>
-    <li><a href="pages/tos.html">Terms of Service</a></li>
-    <li><a href="pages/workout-tracker.html">Workout Tracker</a></li>
+    <li><a href="/raising-the-bar/pages/accessibility-statement.html">Accessibility Statement</a></li>
+    <li><a href="/raising-the-bar/pages/contact-us.html">Contact Us</a></li>
+    <li><a href="/raising-the-bar/pages/cookie-policy.html">Cookie Policy</a></li>
+    <li><a href="/raising-the-bar/pages/copyright-notice.html">Copyright Notice</a></li>
+    <li><a href="/raising-the-bar/pages/dashboard.html">Dashboard</a></li>
+    <li><a href="/raising-the-bar/pages/disclaimer.html">Disclaimer</a></li>
+    <li><a href="/raising-the-bar/pages/dmca-policy.html">DMCA Policy</a></li>
+    <li><a href="/raising-the-bar/pages/eula.html">EULA</a></li>
+    <li><a href="/raising-the-bar/pages/forms.html">Forms</a></li>
+    <li><a href="/raising-the-bar/pages/landing-page.html">Landing Page</a></li>
+    <li><a href="/raising-the-bar/pages/legal-overview.html">Legal Overview</a></li>
+    <li><a href="/raising-the-bar/pages/log-in.html">Log In</a></li>
+    <li><a href="/raising-the-bar/pages/nutrition-tracker.html">Nutrition Tracker</a></li>
+    <li><a href="/raising-the-bar/pages/offer.html">Offer</a></li>
+    <li><a href="/raising-the-bar/pages/privacy-policy.html">Privacy Policy</a></li>
+    <li><a href="/raising-the-bar/pages/refund-policy.html">Refund Policy</a></li>
+    <li><a href="/raising-the-bar/pages/sign-up.html">Sign Up</a></li>
+    <li><a href="/raising-the-bar/pages/tos.html">Terms of Service</a></li>
+    <li><a href="/raising-the-bar/pages/workout-tracker.html">Workout Tracker</a></li>
   </ul>
-  
 </body>
 </html>
