Organize JS structure and fix asset paths

--- a/client/pages/dashboard.html
+++ b/client/pages/dashboard.html
@@ -6,7 +6,7 @@
 
   <!-- Fonts + stylesheet -->
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700;800&family=Roboto:wght@400&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="styles/dashboard.css">
+  <link rel="stylesheet" href="../styles/dashboard.css">
 
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
@@ -14,7 +14,7 @@
   <!-- Header / logo -->
   <header class="header">
     <a href="dashboard.html" class="logo">
-      <img src="src/images/rtb-logo-white.png" alt="Raising The Bar logo">
+      <img src="../assets/rtb-logo-white.png" alt="Raising The Bar logo">
     </a>
     <!-- Desktop nav (inline) -->
     <nav class="main-nav" id="main-nav">
@@ -124,13 +124,13 @@
       </div>
       <div class="social-icons">
         <a href="https://www.instagram.com" target="_blank" aria-label="Instagram">
-          <img src="src/images/instagram-icon.png" alt="Instagram">
+          <img src="../assets/instagram-icon.png" alt="Instagram">
         </a>
         <a href="https://www.youtube.com" target="_blank" aria-label="YouTube">
-          <img src="src/images/youtube-icon.png" alt="YouTube">
+          <img src="../assets/youtube-icon.png" alt="YouTube">
         </a>
         <a href="https://www.tiktok.com" target="_blank" aria-label="TikTok">
-          <img src="src/images/tiktok-icon.png" alt="TikTok">
+          <img src="../assets/tiktok-icon.png" alt="TikTok">
         </a>
       </div>
     </div>
@@ -215,6 +215,6 @@
   </div>
 
   <!-- Logic -->
-  <script src="scripts/dashboard.js"></script>
+  <script src="../scripts/dashboard.js"></script>
 </body>
 </html>
