--- a/client/pages/forms.html
+++ b/client/pages/forms.html
@@ -7,19 +7,19 @@
   <title>Custom Programs</title>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700;800&family=Roboto:wght@400&display=swap"
     rel="stylesheet">
-  <link href="styles/forms.css" rel="stylesheet">
+    <link href="../styles/forms.css" rel="stylesheet">
 </head>
 
 <body>
   <div class="scroll">
     <div class="header fade-in">
       <div class="logo">
-        <a href="index.html">
-          <img id="logo" class="fade-in-logo" src="src/images/rtb-logo-white.png" alt="Raising The Bar Logo">
+        <a href="../index.html">
+          <img id="logo" class="fade-in-logo" src="../assets/rtb-logo-white.png" alt="Raising The Bar Logo">
         </a>
       </div>
       <div class="dark-mode-button">
-        <img id="darkModeToggle" class="fade-in" src="src/images/dark-mode-off-button.png" alt="Dark Mode Button"
+        <img id="darkModeToggle" class="fade-in" src="" alt=""
           height="0px">
       </div>
     </div>
@@ -71,7 +71,7 @@
 
   <!-- <script src="scripts/exercise.js"></script>
   <script src="scripts/meals.js"></script> -->
-  <script type="module" src="scripts/forms.js"></script>
+  <script type="module" src="../scripts/forms.js"></script>
 </body>
 
 </html>
