--- a/client/pages/landing-page.html
+++ b/client/pages/landing-page.html
@@ -7,14 +7,14 @@
   <title>Raising The Bar</title>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700;800&family=Roboto:wght@400&display=swap"
   rel="stylesheet">
-  <link href="styles/landing-page.css" rel="stylesheet">
+  <link href="../styles/landing-page.css" rel="stylesheet">
 </head>
 
 <body>
   <div class="header">
     <div class="header-inner">
-      <a href="index.html" class="logo">
-        <img id="logo" src="src/images/rtb-logo-white.png" alt="Raising The Bar Logo">
+      <a href="../index.html" class="logo">
+        <img id="logo" src="../assets/rtb-logo-white.png" alt="Raising The Bar Logo">
       </a>
   
       <!-- Desktop nav (inline) -->
@@ -33,9 +33,9 @@
       <button class="hamburger" id="hamburger-btn" aria-label="Toggle Menu">☰</button>
   
       <!-- Dark mode toggle -->
-      <!-- <div class="dark-mode-button">
-        <img id="darkModeToggle" src="src/images/dark-mode-off-button.png" alt="Dark Mode Button">
-      </div> -->
+      <div class="dark-mode-button">
+        <img id="darkModeToggle" src="" alt="">
+      </div>
     </div>
   </div>
   
@@ -95,7 +95,7 @@
     <p>Fitness, finally made clear.</p>
   </div>
 <div class="dark-mode-button">
-  <img id="darkModeToggle" src="src/images/dark-mode-off-button.png" alt="Dark Mode Button"
+  <img id="darkModeToggle" src="" alt=""
     height="0px">
 </div>
 
@@ -113,17 +113,17 @@
   <div class="testimonial-card mini">
     <div class="images">
       <div class="before">
-        <img src="src/images/lynn_before.JPEG" alt="Before">
+        <img src="../assets/lynn_before.JPEG" alt="Before">
         <p>Before</p>
       </div>
       <div class="after">
-        <img src="src/images/lynn_after.png" alt="After">
+        <img src="../assets/lynn_after.png" alt="After">
         <p>After</p>
       </div>
     </div>
     <p class="review-name">Lee</p>
     <div class="five-stars">
-      <img src="src/images/5-stars.png" alt="5 Stars">
+      <img src="../assets/5-stars.png" alt="5 Stars">
     </div>
     <p class="review-text-mini">
       Nothing stuck — until this. I lost 8kg and, more than that, I don’t feel lost anymore.
@@ -168,7 +168,7 @@
   <section class="habit-building fade-in">
     <h2>Feel Better, Every Day</h2>
     <div class="habit-image">
-      <img src="src/images/person_walking_outside.jpg" alt="A person running in nature or doing yoga outdoors" />
+      <img src="../assets/person_walking_outside.jpg" alt="A person running in nature or doing yoga outdoors" />
     </div>
     <p>
       This is about more than workouts. When fitness becomes simple and sustainable, everything changes. You’ll think clearer, feel more in control, and build the confidence that comes from showing up for yourself — day after day.
@@ -177,7 +177,7 @@
   <section class="nutrition-section fade-in">
     <h2>Meals That Work With You</h2>
     <div class="nutrition-image">
-      <img src="src/images/meal-prep.jpg" alt="A person preparing a healthy meal or enjoying food confidently" />
+      <img src="../assets/meal-prep.jpg" alt="A person preparing a healthy meal" />
     </div>
     <p>
       Your meals are tailored to your lifestyle, goals, and body’s needs — with evolving meal plans that keep things fresh. No extra apps. No stress. Just simple, balanced nutrition that fits into your life.
@@ -258,18 +258,18 @@
         </div>
         <div class="social-icons">
           <a href="https://www.instagram.com" target="_blank" aria-label="Instagram">
-            <img src="src/images/instagram-icon.png" alt="Instagram">
+            <img src="../assets/instagram-icon.png" alt="Instagram">
           </a>
           <a href="https://www.youtube.com" target="_blank" aria-label="YouTube">
-            <img src="src/images/youtube-icon.png" alt="YouTube">
+            <img src="../assets/youtube-icon.png" alt="YouTube">
           </a>
           <a href="https://www.tiktok.com" target="_blank" aria-label="TikTok">
-            <img src="src/images/tiktok-icon.png" alt="TikTok">
+            <img src="../assets/tiktok-icon.png" alt="TikTok">
           </a>
         </div>
       </div>
     </footer>
-  <script src="scripts/landing-page.js"></script>
+    <script type="module" src="../scripts/landing-page.js"></script>
 </body>
 
 </html>
