--- a/client/pages/log-in.html
+++ b/client/pages/log-in.html
@@ -7,7 +7,7 @@
   <title>Log in</title>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700;800&family=Roboto:wght@400&display=swap"
     rel="stylesheet">
-  <link href="styles/log-in.css" rel="stylesheet">
+    <link href="../styles/log-in.css" rel="stylesheet">
 </head>
 
 <body>
@@ -48,18 +48,18 @@
       </div>
       <div class="social-icons">
         <a href="https://www.instagram.com" target="_blank" aria-label="Instagram">
-          <img src="src/images/instagram-icon.png" alt="Instagram">
+          <img src="../assets/instagram-icon.png" alt="Instagram">
         </a>
         <a href="https://www.youtube.com" target="_blank" aria-label="YouTube">
-          <img src="src/images/youtube-icon.png" alt="YouTube">
+          <img src="../assets/youtube-icon.png" alt="YouTube">
         </a>
         <a href="https://www.tiktok.com" target="_blank" aria-label="TikTok">
-          <img src="src/images/tiktok-icon.png" alt="TikTok">
+          <img src="../assets/tiktok-icon.png" alt="TikTok">
         </a>
       </div>
     </div>
   </footer>
-  <script src="scripts/log-in.js"></script>
+  <script src="../scripts/log-in.js"></script>
 </body>
 
 </html>
