--- a/client/pages/offer.html
+++ b/client/pages/offer.html
@@ -7,14 +7,14 @@
   <title>Claim your program</title>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700;800&family=Roboto:wght@400&display=swap"
     rel="stylesheet">
-  <link href="styles/offer.css" rel="stylesheet">
+    <link href="../styles/offer.css" rel="stylesheet">
 </head>
 
 <body>
   <div class="header">
     <div class="logo">
-      <a href="index.html">
-        <img id="logo" class="logo fade-in" src="src/images/rtb-logo-white.png" alt="Raising The Bar Logo">
+      <a href="../index.html">
+        <img id="logo" class="logo fade-in" src="../assets/rtb-logo-white.png" alt="Raising The Bar Logo">
       </a>
     </div>
   </div>
@@ -152,7 +152,7 @@
             <strong>Bob</strong>
           </div>
           <div class="testimonial-right">
-            <img src="src/images/5-stars.png" alt="5 Stars" class="star-rating">
+            <img  src="../assets/5-stars.png" alt="5 Stars" class="star-rating">
           </div>
         </div>
         <div class="review-placeholder">
@@ -394,18 +394,18 @@
         </div>
         <div class="social-icons">
           <a href="https://www.instagram.com" target="_blank" aria-label="Instagram">
-            <img src="src/images/instagram-icon.png" alt="Instagram">
+            <img src="../assets/instagram-icon.png" alt="Instagram">
           </a>
           <a href="https://www.youtube.com" target="_blank" aria-label="YouTube">
-            <img src="src/images/youtube-icon.png" alt="YouTube">
+            <img src="../assets/youtube-icon.png" alt="YouTube">
           </a>
           <a href="https://www.tiktok.com" target="_blank" aria-label="TikTok">
-            <img src="src/images/tiktok-icon.png" alt="TikTok">
+            <img src="../assets/tiktok-icon.png" alt="TikTok">
           </a>
         </div>
       </div>
     </footer>
-  <script src="scripts/offer.js"></script>
+    <script src="../scripts/offer.js"></script>
 </body>
 
 </html>
