--- a/client/pages/accessibility-statement.html
+++ b/client/pages/accessibility-statement.html
@@ -8,14 +8,14 @@
   <link
     href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700;800&family=Roboto:wght@400&display=swap"
     rel="stylesheet">
-  <link href="styles/accessibility-statement.css" rel="stylesheet">
+    <link href="../styles/accessibility-statement.css" rel="stylesheet">
 </head>
 
 <body>
   <div class="header">
     <div class="logo">
       <a href="index.html">
-        <img src="../assets/images/rtb-logo-white.png" alt="Logo">
+        <img src="../assets/rtb-logo-white.png" alt="Logo">
       </a>
     </div>
   </div>
@@ -98,13 +98,13 @@
       </div>
       <div class="social-icons">
         <a href="https://www.instagram.com" target="_blank" aria-label="Instagram">
-          <img src="src/images/instagram-icon.png" alt="Instagram">
+          <img src="../assets/instagram-icon.png" alt="Instagram">
         </a>
         <a href="https://www.youtube.com" target="_blank" aria-label="YouTube">
-          <img src="src/images/youtube-icon.png" alt="YouTube">
+          <img src="../assets/youtube-icon.png" alt="YouTube">
         </a>
         <a href="https://www.tiktok.com" target="_blank" aria-label="TikTok">
-          <img src="src/images/tiktok-icon.png" alt="TikTok">
+          <img src="../assets/tiktok-icon.png" alt="TikTok">
         </a>
       </div>
     </div>
