--- a/client/pages/nutrition-tracker.html
+++ b/client/pages/nutrition-tracker.html
@@ -8,7 +8,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700;800&family=Roboto:wght@400&display=swap"
     rel="stylesheet">
   <!-- Link to the external CSS file -->
-  <link rel="stylesheet" href="styles/nutrition-tracker.css">
+  <link rel="stylesheet" href="../styles/nutrition-tracker.css">
 </head>
 
 <body>
@@ -16,7 +16,7 @@
   <div class="header" id="header">
     <div class="logo">
       <a href="dashboard.html">
-        <img id="logo" src="src/images/rtb-logo-white.png" alt="Raising The Bar Logo">
+        <img id="logo" src="../assets/rtb-logo-white.png" alt="Raising The Bar Logo">
       </a>
       <!-- Desktop nav (inline) -->
       <nav class="main-nav" id="main-nav">
@@ -409,13 +409,13 @@
       </div>
       <div class="social-icons">
         <a href="https://www.instagram.com" target="_blank" aria-label="Instagram">
-          <img src="src/images/instagram-icon.png" alt="Instagram">
+          <img src="../assets/instagram-icon.png" alt="Instagram">
         </a>
         <a href="https://www.youtube.com" target="_blank" aria-label="YouTube">
-          <img src="src/images/youtube-icon.png" alt="YouTube">
-        </a>
+          <img src="../assets/youtube-icon.png" alt="YouTube">
+          
         <a href="https://www.tiktok.com" target="_blank" aria-label="TikTok">
-          <img src="src/images/tiktok-icon.png" alt="TikTok">
+          <img src="../assets/tiktok-icon.png" alt="TikTok">
         </a>
       </div>
     </div>
@@ -423,7 +423,7 @@
 
   <!-- External JS -->
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-  <script src="scripts/nutrition-tracker.js"></script>
+  <script src="../scripts/nutrition-tracker.js"></script></script>
 </body>
 
 </html>
