--- a/client/pages/refund-policy.html
+++ b/client/pages/refund-policy.html
@@ -9,18 +9,18 @@
   href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700;800&family=Roboto:wght@400&display=swap"
   rel="stylesheet"
 >
-  <link href="styles/refund-policy.css" rel="stylesheet">
+<link href="../styles/refund-policy.css" rel="stylesheet">
 </head>
 
 <body>
   <div class="header">
     <div class="logo">
       <a href="index.html">
-        <img id="logo" class="logo fade-in" src="src/images/rtb-logo-white.png" alt="Raising The Bar Logo">
+        <img id="logo" class="logo fade-in"  src="../assets/rtb-logo-white.png" alt="Raising The Bar Logo">
       </a>
     </div>
     <div class="dark-mode-button">
-      <img id="darkModeToggle" class="fade-in" src="src/images/dark-mode-off-button.png" alt="Dark Mode Button"
+      <img id="darkModeToggle" class="fade-in" src="" alt=""
         height="0px">
     </div>
   </div>
@@ -86,13 +86,13 @@
     </div>
     <div class="social-icons">
       <a href="https://www.instagram.com" target="_blank" aria-label="Instagram">
-        <img src="src/images/instagram-icon.png" alt="Instagram">
+        <img src="../assets/instagram-icon.png" alt="Instagram">
       </a>
       <a href="https://www.youtube.com" target="_blank" aria-label="YouTube">
-        <img src="src/images/youtube-icon.png" alt="YouTube">
+        <img src="../assets/youtube-icon.png" alt="YouTube">
       </a>
       <a href="https://www.tiktok.com" target="_blank" aria-label="TikTok">
-        <img src="src/images/tiktok-icon.png" alt="TikTok">
+        <img src="../assets/tiktok-icon.png" alt="TikTok">
       </a>
     </div>
   </div>
