--- a/client/pages/workout-tracker.html
+++ b/client/pages/workout-tracker.html
@@ -491,7 +491,10 @@
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <!-- Link to the external JavaScript file -->
   <script type="module" src="../scripts/forms.js"></script>
-	<script src="../scripts/workout-tracker.js"></script>
+  <script type="module" defer src="../scripts/modules/my-progress.js"></script>
+
+  <!-- then the tracker file that calls those globals -->
+  <script defer src="../scripts/workout-tracker.js"></script>
 </body>
 
 </html>
