--- a/client/pages/log-in.html
+++ b/client/pages/log-in.html
@@ -11,6 +11,17 @@
 </head>
 
 <body>
+  <div class="header">
+    <div class="logo">
+      <a href="../index.html">
+          <img id="logo" class="fade-in" src="../assets/rtb-logo-white.png" alt="Raising The Bar Logo">
+        </a>
+      </div>
+    <div class="dark-mode-button">
+      <img id="darkModeToggle" class="fade-in" src="" alt=""
+        height="0px">
+    </div>
+  </div>
   <div class="login-container">
     <div class="login-box">
       <h2>Login</h2>
@@ -59,7 +70,8 @@
       </div>
     </div>
   </footer>
-  <script src="../scripts/log-in.js"></script>
+  <script type="module" src="../scripts/log-in.js"></script>
+
 </body>
 
 </html>
