--- a/client/pages/nutrition-tracker.html
+++ b/client/pages/nutrition-tracker.html
@@ -1,6 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
 
+<script>
+  (async function() {
+    const token = localStorage.getItem('token');
+    if (!token) {
+      location.href = 'log-in.html';
+      return;
+    }
+    try {
+      const res = await fetch('/api/auth/me', {
+        method: 'GET',
+        headers: { 'Authorization': 'Bearer ' + token }
+      });
+      if (!res.ok) throw new Error();
+    } catch (err) {
+      localStorage.removeItem('token');
+      location.href = 'log-in.html';
+      return;
+    }
+    // authenticated—rest of the page will load normally
+  })();
+</script>
+
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -423,7 +445,9 @@
 
   <!-- External JS -->
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-  <script src="../scripts/nutrition-tracker.js"></script></script>
+  <!-- <script type="module" defer src="../scripts/modules/my-progress.js"></script>
+  <script defer src="../scripts/workout-tracker.js"></script> -->
+  <script src="../scripts/nutrition-tracker.js"></script>
 </body>
 
 </html>
