--- a/client/pages/sign-up.html
+++ b/client/pages/sign-up.html
@@ -115,7 +115,7 @@
       </div>
     </div>
   </footer>
-  <script src="../scripts/sign-up.js"></script>
+  <script type="module" src="../scripts/sign-up.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
 </body>
 
