--- a/client/pages/workout-tracker.html
+++ b/client/pages/workout-tracker.html
@@ -1,12 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
 
+<script>
+  (async function() {
+    const token = localStorage.getItem('token');
+    if (!token) {
+      location.href = 'log-in.html';
+      return;
+    }
+    try {
+      const res = await fetch('/api/auth/me', {
+        method: 'GET',
+        headers: { 'Authorization': `Bearer ${token}` }
+      });
+      if (!res.ok) throw new Error();
+    } catch (err) {
+      localStorage.removeItem('token');
+      location.href = 'log-in.html';
+      return;
+    }
+    // If we get here, user is authenticated → do nothing
+  })();
+</script>
+
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>My Workouts</title>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700;800&family=Roboto:wght@400&display=swap"
     rel="stylesheet">
+    <link
+  rel="stylesheet"
+  href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+/>
   <!-- Link to the external CSS file -->
   <link rel="stylesheet" href="../styles/workout-tracker.css">
 </head>
