--- a/client/pages/sign-up.html
+++ b/client/pages/sign-up.html
@@ -76,7 +76,7 @@
           <span class="error-message" id="confirm-error" role="alert"></span>
         </div>
   
-        <button type="submit" class="signup-btn">Create Account</button>
+        <button type="submit" class="signup-btn">Claim My Program</button>
       </form>
   
       <p class="terms">
