Upsell Payment Fix

--- a/client/pages/dashboard.html
+++ b/client/pages/dashboard.html
@@ -11,6 +11,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
+  <div id="loaderOverlay" class="loader-overlay">
+    <img src="../assets/rtb-logo-white.png" alt="Raising The Bar logo"
+         class="loader-logo" />
+  </div>
   <!-- Header / logo -->
   <header class="header">
     <a href="dashboard.html" class="logo">
