--- a/client/pages/workout-tracker.html
+++ b/client/pages/workout-tracker.html
@@ -38,6 +38,10 @@
 </head>
 
 <body>
+  <div id="loaderOverlay" class="loader-overlay">
+    <img src="../assets/rtb-logo-white.png" alt="Raising The Bar logo"
+         class="loader-logo" />
+  </div>
   <!-- Header -->
   <div class="header" id="header">
     <div class="logo">
