--- a/client/pages/landing-page.html
+++ b/client/pages/landing-page.html
@@ -122,7 +122,7 @@
     </div>
   </div>
   <div class="slogan fade-in">
-    <p>Fitness, finally made clear.</p>
+    <p>We ask how you feel — then adjust your plan around it.</p>
   </div>
 <div class="dark-mode-button">
   <img id="darkModeToggle" src="" alt=""
@@ -163,10 +163,11 @@
   <section class="tailored-training-plan fade-in">
     <h2>What You’re Getting</h2>
     <p class="hero-subheading">
-      This is where your transformation begins.
+      This is how you finally stay consistent — and see real progress.
       </p>
       <p class="hero-text">
-        You'll get a web-based <strong>adaptive all-in-one-tracker</strong>, tailored to you from the start, designed to <strong>remove guesswork</strong>  and evolve with you.
+        <!-- You'll unlock a web-based <strong>adaptive all-in-one-tracker</strong>, tailored to you from the start, designed to <strong>remove guesswork</strong>  and evolve with you. -->
+         You’ll unlock a smart, web-based tracker that’s built around you — adapting to your goals, your performance, and your progress.
         <p class="hero-text">
           <!-- When you join, you’ll unlock access to your personal dashboard where <strong>everything connects</strong>: -->
     </p>
@@ -181,13 +182,13 @@
         <li class="step-item">
           <span class="emoji-box">🚀</span>
           <p>
-            <strong>Unlock your all-in-one-tracker</strong>, packed with tailored workouts, meals, and progress tools, ready in minutes.
+            <strong>Unlock your all-in-one-tracker</strong>, packed with tailored workouts, meals, and progress tools, ready instantly.
           </p>
         </li>
         <li class="step-item">
           <span class="emoji-box">💪</span>
           <p style="margin-bottom: 5px;">
-            <strong>Stay consistent and see progress</strong> with smart tracking that learns from your performance and evolves with you.
+            <strong>Stay consistent and build momentum</strong> - with a plan that adapts every step of the way.
           </p>
       </ul>
       <p class="hero-text">
@@ -201,7 +202,7 @@
       <img src="../assets/person_walking_outside.jpg" alt="A person running in nature or doing yoga outdoors" />
     </div>
     <p>
-      This is about more than workouts. When fitness becomes simple and sustainable, everything changes. You’ll think clearer, feel more in control, and build the confidence that comes from showing up for yourself — day after day.
+      This is about more than workouts. When your plan adjusts to your life — not the other way around — everything changes. You’ll think clearer, feel more in control, and build the confidence that comes from showing up for yourself — day after day.
     </p>
   </section>  
   <section class="nutrition-section fade-in">
@@ -210,7 +211,7 @@
       <img src="../assets/meal-prep.jpg" alt="A person preparing a healthy meal" />
     </div>
     <p>
-      Your meals are tailored to your lifestyle, goals, and body’s needs — with evolving meal plans that keep things fresh. No extra apps. No stress. Just simple, balanced nutrition that fits into your life.
+      Your meals adapt to your goals, preferences, and schedule — with evolving plans that keep things fresh and easy to follow. No extra apps. No stress. Just simple, balanced nutrition that fits into your life.
     </p>
   </section>  
 <!-- Testimonial Section (Landing Page) -->
@@ -278,7 +279,7 @@
   
     <footer class="footer fade-in" id="footer">
       <div class="footer-content">
-        <p>&copy; 2025 Raising The Bar. All rights reserved.</p>
+        <p>&copy; 2025 Raising The Bar App Ltd. All rights reserved.</p>
         <div class="footer-links">
           <a href="index.html">Start Training</a>
           <span class="separator">|</span>
