--- a/client/pages/offer.html
+++ b/client/pages/offer.html
@@ -27,8 +27,7 @@
 
   <div class="whats-included-container fade-in">
     <h2 class="wi2-heading">Inside Your All-In-One Tracker</h2>
-    <p class="wi2-description">Explore the tools that make your journey feel clear, customized, and sustainable — all in
-      one tracker.</p>
+    <p class="wi2-description">Everything you need to stay consistent — workouts, meals, and progress that adjust as you go.</p>
 
     <div class="wi2-content">
       <!-- LEFT: Subheadings with 50px margin between them -->
@@ -265,11 +264,11 @@
         <!-- Moved .additional-info outside .offer-left so it can span the entire card -->
         <div class="additional-info" id="info-new" style="display: none;">
           <h4>Your Complete Fitness Solution</h4>
-          <p class="catchy-line">All-in-one. Adaptive. No guesswork.</p>
+          <p class="catchy-line">We ask how you feel. Then your plan adapts — workouts, meals, and progress — all in sync.</p>
           <ul class="offer-includes">
-            <li>🏋️ Your training evolves and adapts to your needs—no guesswork.</li>
-            <li>🍽️ Meal plans stay in sync with your workouts and body.</li>
-            <li>📈 Track your strength, consistency, and progress—all in one place.
+            <li>🏋️ We adjust your workouts based on how you feel — set by set.</li>
+            <li>🍽️ Your meals match your goals and schedule — automatically.</li>
+            <li>📈 Progress tools that respond to your effort and keep you moving forward.
             </li>
           </ul>
         </div>
@@ -384,7 +383,7 @@
 
     <footer class="footer fade-in" id="footer">
       <div class="footer-content">
-        <p>&copy; 2025 Raising The Bar. All rights reserved.</p>
+        <p>&copy; 2025 Raising The Bar App Ltd. All rights reserved.</p>
         <div class="footer-links">
           <a href="index.html">Start Training</a>
           <span class="separator">|</span>
