--- a/client/pages/sign-up.html
+++ b/client/pages/sign-up.html
@@ -94,7 +94,7 @@
 
   <footer class="footer fade-in" id="footer">
     <div class="footer-content">
-      <p>&copy; 2025 Raising The Bar. All rights reserved.</p>
+      <p>&copy; 2025 Raising The Bar App Ltd. All rights reserved.</p>
       <div class="footer-links">
         <a href="index.html">Start Training</a>
         <span class="separator">|</span>
