--- a/client/pages/sign-up.html
+++ b/client/pages/sign-up.html
@@ -132,13 +132,13 @@ var e=ttq._i[t]||[],n=0;n<ttq.methods.length;n++)ttq.setAndDefer(e,ttq.methods[n
         <a href="contact-us.html">Contact Us</a>
       </div>
       <div class="social-icons">
-        <a href="https://www.instagram.com" target="_blank" aria-label="Instagram">
+        <a href="https://www.instagram.com/raising_the_bar_app/?hl=en" target="_blank" aria-label="Instagram">
           <img src="../assets/instagram-icon.png" alt="Instagram">
         </a>
-        <a href="https://www.youtube.com" target="_blank" aria-label="YouTube">
+        <a href="https://www.youtube.com/@Raising_The_Bar_App" target="_blank" aria-label="YouTube">
           <img src="../assets/youtube-icon.png" alt="YouTube">
         </a>
-        <a href="https://www.tiktok.com" target="_blank" aria-label="TikTok">
+        <a href="https://www.tiktok.com/@raising_the_bar_app" target="_blank" aria-label="TikTok">
           <img src="../assets/tiktok-icon.png" alt="TikTok">
         </a>
       </div>
