Updated meta tags

--- a/client/index.html
+++ b/client/index.html
@@ -10,7 +10,7 @@
   <meta property="og:title" content="Raising The Bar – Adaptive Fitness Programs">
   <meta property="og:description"
     content="A smarter fitness tracker that adapts to your performance, meals, and lifestyle.">
-  <meta property="og:image" content="https://raising-the-bar.vercel.app/assets/rtb-logo-white.png">
+  <meta property="og:image" content="https://raising-the-bar.vercel.app/assets/og-preview.jpg">
 
   <!-- Twitter Card -->
   <meta name="twitter:card" content="summary_large_image">
@@ -18,7 +18,7 @@
   <meta name="twitter:title" content="Raising The Bar – Adaptive Fitness Programs">
   <meta name="twitter:description"
     content="A smarter fitness tracker that adapts to your performance, meals, and lifestyle.">
-  <meta name="twitter:image" content="https://raising-the-bar.vercel.app/assets/rtb-logo-white.png">
+  <meta name="twitter:image" content="https://raising-the-bar.vercel.app/assets/og-preview.jpg">
 
   <title>Raising The Bar</title>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700;800&family=Roboto:wght@400&display=swap"
