--- a/client/index.html
+++ b/client/index.html
@@ -197,7 +197,7 @@ var e=ttq._i[t]||[],n=0;n<ttq.methods.length;n++)ttq.setAndDefer(e,ttq.methods[n
         <img src="../assets/5-stars.png" alt="5 Stars">
       </div>
       <p class="review-text-mini">
-        Nothing stuck — until this. I lost 10kg and, more than that, I don’t feel lost anymore.
+        Nothing worked — until this. I’ve lost 10kg, but more than that, I finally feel like myself again.
       </p>
     </div>
   </section>
