--- a/client/index.html
+++ b/client/index.html
@@ -288,15 +288,14 @@ var e=ttq._i[t]||[],n=0;n<ttq.methods.length;n++)ttq.setAndDefer(e,ttq.methods[n
   </div>
   <section class="youtube-prompt-section fade-in">
     <div class="youtube-video-container">
-
       <!-- Placeholder video -->
-      <iframe width="560" height="315" src="https://www.youtube.com/embed/dQw4w9WgXcQ" title="YouTube video placeholder"
+      <iframe width="560" height="315" src="https://www.youtube.com/embed/MPevL0xPZ9c" title="Raising The Bar Video"
         frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
         allowfullscreen>
       </iframe>
     </div>
     <p class="hero-text">
-      Watch how it works — in under 90 seconds.
+      Watch how it works — in under 60 seconds.
     </p>
     <div class="join-now-prompt">
       <h2>Join now</h2>
