--- a/client/pages/offer.html
+++ b/client/pages/offer.html
@@ -126,8 +126,8 @@
     <section class="youtube-prompt-section">
       <div class="youtube-video-container">
         <!-- Placeholder video -->
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/dQw4w9WgXcQ"
-          title="YouTube video placeholder" frameborder="0"
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/MPevL0xPZ9c" title="Raising The Bar Video"
+          frameborder="0"
           allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
           allowfullscreen>
         </iframe>
